<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.antrixgaming.leap.LoadScreen"
    android:background="@drawable/background_color">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/googleSignIn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="29dp"
                    android:text="@string/leap_in"
                    android:textColor="@color/indieA"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/googleSignIn"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="42dp"
                    android:background="@color/nightRedA"
                    android:drawableLeft="@drawable/common_google_signin_btn_icon_light_normal"
                    android:text="Sign in with Google+"
                    android:textColor="@color/white"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true" />


            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="37dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OR"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="181dp"
                    tools:layout_editor_absoluteY="143dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="14dp" />

                <EditText
                    android:id="@+id/userEmail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    tools:layout_editor_absoluteX="42dp"
                    tools:layout_editor_absoluteY="214dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="44dp" />

                <EditText
                    android:id="@+id/userPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    tools:layout_editor_absoluteX="42dp"
                    tools:layout_editor_absoluteY="277dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">

                <Button
                    android:id="@+id/signInButton"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/leap_button"
                    android:text="@string/leap_in"
                    android:textColor="@color/nightRedA"
                    tools:layout_editor_absoluteX="42dp"
                    tools:layout_editor_absoluteY="339dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="22dp" />

                <TextView
                    android:id="@+id/registerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Not yet a member? Register"
                    android:textColor="@color/white"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />


            </RelativeLayout>


        </RelativeLayout>


    </LinearLayout>




</RelativeLayout>
